Make category in "other add-ons" section visible (fix #2384)

--- a/static/css/restyle/restyle.less
+++ b/static/css/restyle/restyle.less
@@ -1244,7 +1244,6 @@ h3.author .transfer-ownership {
   .notice p,
   .notice p a,
   .notice p b,
-  .category.more-info,
   .vital a,
   .warning a,
   #addon-summary,
